--- a/index.html
+++ b/index.html
@@ -235,6 +235,18 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+                    <h3 class="text-light fs-3 text-wrap text-responsive p-2 m-0">Who are we?</h3>
+                    <ul class="list-group ps-2 text-light rubik-light" style="list-style-type: none; font-size: .9rem;">
+                        <li><a class="text-light link-underline link-underline-opacity-0">Demafelis, Clifford Kyle S.</a></li>
+                        <li><a class="text-light link-underline link-underline-opacity-0">Ravelo, Nicole M.</a></li>
+                        <li><a class="text-light link-underline link-underline-opacity-0">Santiago, Aira J.</a></li>
+                        <li><a class="text-light link-underline link-underline-opacity-0">Embate, Exequiel</a></li>
+                    </ul>
+                </div>
+            </div>
             
             <div class="container-fluid d-flex justify-content-center align-items-center my-5" style="background-color: #6C4E2F;">
                 <p class="text-light text-wrap py-2 m-0" style="font-size: .7rem;">Copyright Menu4You 2024. All Rights Reserved.</p>
